add conf validators 2

--- a/config/patterns.yaml
+++ b/config/patterns.yaml
@@ -1,11 +1,16 @@
 version: 1
 regex:
-  org_pattern: "(?:ООО|АО|ПАО|ЗАО|ОАО|ГУП|МУП|ИП|ФГБУ|АНО|НКО|ТСЖ|акционерное\\s+общество|Общество\\s+с\\s+ограниченной)\\s+[«\\\"']?[А-ЯЁA-Z0-9][^\\\"»\\n]{1,100}[»\\\"']?"
+  org_pattern: >-
+    (?:ООО|АО|ПАО|ЗАО|ОАО|ГУП|МУП|ИП|ФГБУ|АНО|НКО|ТСЖ|
+    Общество\W{0,5}с\W{0,5}ограниченной\W{0,5}ответственностью|
+    Акционерное\W{0,5}общество|
+    Публичное\W{0,5}акционерное\W{0,5}общество|
+    Закрытое\W{0,5}акционерное\W{0,5}общество)\W{0,5}[«"“„']?\s*[А-ЯЁA-Z0-9][^"»”\n]{1,200}[»"”']?
   role_named_pattern: "именуем\\w*\\s+в\\s+дальнейшем\\s+[«\\\"']?\\s*([А-ЯЁA-Z][^»\\\"\\n]{1,40})[»\\\"']?"
   in_face_pattern: "в\\s+лице\\s+[^,\\n]+?,\\s*действующ\\w*\\s+на\\s+основан\\w+"
   subject_header_pattern: "(?im)^\\s*(ПРЕДМЕТ\\s+ДОГОВОРА|Предмет\\s+договора)\\s*$"
 flags:
-  org_pattern: ["U"]
+  org_pattern: ["I","U","X"]
   role_named_pattern: ["I","U"]
   in_face_pattern: ["I","U"]
   subject_header_pattern: ["I","M","U"]
