--- a/config/patterns.yaml
+++ b/config/patterns.yaml
@@ -26,6 +26,32 @@ regex:
   bik_pattern:  '\b\d{9}\b'
   rs_pattern:   '\b\d{20}\b'
   ks_pattern:   '\b\d{20}\b'
+  addr_window_pattern: |-
+    \b(?:
+      г|город|рп|пгт|пос|пос[её]лок|дер|деревня|с|село|
+      р-н|район|мо|муницип(?:алитет|альное[ \t]+образование)|
+      ул|улица|пр-?т|просп(?:ект)?|пер|переулок|
+      ш(?:оссе)?|шоссе|наб(?:ережная)?|пл(?:ощадь)?|проезд|
+      б-?р|бульвар|тер(?:ритория)?|промзона|
+      кв|квартира|лит|
+      д\.?|дом|корп\.?|корпус|стр\.?|строение
+    )\b.{50,100}?
+    \b(?:
+      г|город|рп|пгт|пос|пос[её]лок|дер|деревня|с|село|
+      р-н|район|мо|муницип(?:алитет|альное[ \t]+образование)|
+      ул|улица|пр-?т|просп(?:ект)?|пер|переулок|
+      ш(?:оссе)?|шоссе|наб(?:ережная)?|пл(?:ощадь)?|проезд|
+      б-?р|бульвар|тер(?:ритория)?|промзона|
+      кв|квартира|лит|комн|
+      д\.?|дом|корп\.?|корпус|стр\.?|строение
+    )\b
+  addr_street_pattern: |-
+    \b(ул\.?|улица|пр-?т|просп(?:ект)?|пер|переулок|
+       ш(?:оссе)?|шоссе|наб\.?|набережная|
+       пл\.?|площадь|проезд|б-?р|бульвар)\b
+  addr_house_pattern: |-
+    \b(д\.?|дом|корп\.?|корпус|стр\.?|строение)\b
+    \s*\d+([/\-]\w+)?
 flags:
   org_pattern: ["I","U","X"]
   role_named_pattern: ["I","U","X"]
@@ -38,7 +64,10 @@ flags:
   kpp_pattern:  ["U"]
   bik_pattern:  ["U"]
   rs_pattern:   ["U"]
-  ks_pattern:   ["U"]  
+  ks_pattern:   ["U"]
+  addr_window_pattern: ["I","U","X","S"]
+  addr_street_pattern: ["I","U","X"]
+  addr_house_pattern: ["I","U","X"]
 keywords:
   subject_keywords:
     - "обязуется"
